//
//  Constants.swift
//  WatchList
//
//  Created by Animesh Mishra on 2/12/21.
//

import Foundation

struct Constants {
    /// Cell constants
    static let MovieListIdentifier = "goToMovieListViewController"
    static let SeriesListIdentifier = "goToSeriesListViewController"
    static let BlankString = ""
    static let ProgramCollectionViewCell = "ProgramCollectionViewCell"
    static let Main = "Main"
    static let LineSpace = "\n"
    static let ShareText = "Hey, I would recomend you to watch \"%@\"."
    
    /// Navigations
    static let ProgramOptions = "Program Options"
    static let SeriesTitle = "Series List"
    static let MovieTitle = "Movie List"

    /// Errors
    static let ErrorTitle = "Error...!!!"
    static let ErrorMessage = "Sorry, We are not able to receive %@ details. Please check your internet connection."
    static let ErrorOk = "OK"
    static let ErrorRetry = "Retry"
    static let Movies = "Movies"
    static let Series = "Series"
    static let Programs = "Programs"

}
