...
                                </constraints>
                                <color key="tintColor" systemColor="systemBlueColor"/>
                                <state key="normal" image="square.and.arrow.up" catalog="system" backgroundImage="square.and.arrow.up">
                                    <color key="titleColor" name="AccentColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="shareButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="shareButton:" destination="IYy-c5-peB" eventType="touchUpInside" id="O9V-OM-biR"/>
                                </connections>
                            </button>
                        </subviews>
...
